# binarymagic-tas

./: Cargo.toml  README.md
src/: main.rs  sigscan.rs  sys.rs
